# GameLife

./: CMakeLists.txt  main.cpp
src/: Plate.cpp  Plate.h  common.h
